--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "prepare": "tsc --declarationDir dist/types && tsc --outDir dist/cjs --module commonjs --declaration false",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/xiangqi.ts src/debug.ts src/fen.ts src/san.ts src/variant.ts src/pgn.ts",
+    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/xiangqi.ts src/compat.ts src/debug.ts src/fen.ts src/san.ts src/variant.ts src/pgn.ts",
     "lint": "eslint src/*.ts",
     "format": "dprint fmt",
     "check-format": "dprint check"
