--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v4
       - run: npm ci
       - run: npm test
-      #      - run: cd examples && npm ci
+      - run: cd examples && npm ci
       - run: npm run lint
       - run: npm run check-format
